--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -38,6 +38,7 @@
             background-repeat: no-repeat;
             height: 100%;
             top: 0;
+            display: none !important;
         }
         &::before{
             top: -50px;
@@ -102,7 +103,7 @@
         }
         .title-txt{
             color: #4D6090;
-            padding: 0 80px;
+            padding: 0 !important;
             font-size: 18px;
             font-weight: 300;
             margin-bottom: 25px;
@@ -163,7 +164,10 @@
             }
         }
         .btn-block{
-            padding-top: 45px;
+            padding: 15px 0 40px;
+            @media ($sm-579) {
+                padding: 10px 0 25px;
+            }
             .banner-btn{
                 text-align: center;
                 width: 300px;
@@ -485,7 +489,7 @@
         font-size: 14px;
     }
     .home-banner-sec {
-        padding: 80px 50px 80px;
+        padding: 50px 50px 80px;
     }
     .home-banner-sec .home-banner-cover h2 {
         font-size: 36px;
@@ -592,7 +596,7 @@
         padding: 0 100px;
     }
     .home-banner-sec {
-        padding: 50px 50px 80px;
+        padding: 40px 50px 70px;
     }
     .home-banner-sec .home-banner-cover .banner-card-wapper .banner-num-card h4 {
         font-size: 19px;
@@ -669,9 +673,6 @@
 @media($sm-1199){
     .home-banner-sec .home-banner-cover .banner-card-cover{
         max-width: 500px;
-    }
-    .home-banner-sec .home-banner-cover .btn-block {
-        padding-top: 26px;
     }
     .home-video-block .video-block-cover .video-slider .video-item .video-item-cover .left-col ul li {
         font-size: 14px;
@@ -870,7 +871,7 @@
         height: 70px;
     }
     .home-banner-sec {
-        padding: 100px 0;
+        padding: 30px 0 50px;
     }
     .home-banner-sec .home-banner-container::after{
         transform: none;
@@ -884,9 +885,6 @@
         height: 110px;
         width: 250px;
     }
-    .home-banner-sec .home-banner-cover .banner-card-cover{
-        padding-top: 65px;
-    }
     .app-img-sec::before {
         height: 200px;
     }
@@ -895,9 +893,6 @@
     .home-banner-sec .home-banner-cover::before {
         height: 335px;
         top: -50px;
-    }
-    .home-banner-sec .home-banner-cover .banner-card-cover {
-        padding-top: 55px;
     }
     .home-banner-sec .home-banner-container::after{
         top: 45%;
@@ -971,9 +966,6 @@
     
 }
 @media(max-width: 360px){
-    .home-banner-sec .home-banner-cover .banner-card-cover {
-        padding-top: 35px;
-    }
     .home-banner-sec .home-banner-container::after {
         top: 41%;
         // background-size: auto 100px;
