--- a/scss/side-nav.scss
+++ b/scss/side-nav.scss
@@ -118,6 +118,9 @@
             @media (max-width: 1679px) {
                 padding-top: 5px;
             }
+            @media (max-width: 991px) {
+                padding-top: 20px;
+            }
             
             .nav-item{
                 margin-bottom: 12px;
