--- a/scss/login.scss
+++ b/scss/login.scss
@@ -181,6 +181,10 @@
                 align-items: center;
                 justify-content: center;
                 color:$primary-light;
+                transition: .3s;
+                &:hover{
+                    opacity: .8;
+                }
                 @media(max-width:1679px)
                 {
                     margin-top: 30px;
@@ -791,5 +795,74 @@ button.close-modal {
     .passcode-body-cover .passcode-content-block .form-block .inp-block .form-control {
         height: 42px;
         font-size: 15px;
+    }
+}
+.fa2-block{
+    .verify-block {
+        text-align: center;
+
+        h4 {
+            color: $primary-dark;
+            font-size: 20px;
+            font-weight: 600;
+            margin: 30px 0 15px;
+        }
+
+        p {
+            max-width: 420px;
+            margin: 0 auto 15px;
+            color: #697F9B;
+            text-align: center;
+            font-size: 15px;
+            @media ($sm-1679) {
+                font-size: 14px;
+            }
+        }
+    }
+    .verify-block p {
+        font-family: $font-primary;
+        max-width: 100%;
+    }
+
+    .auth-inp-wrapper {
+        justify-content: center;
+        padding-top: 25px;
+
+        .auth-inp {
+            border-radius: 16px;
+            border: 1px solid #E3E4F3;
+            background: #F3F4FA;
+            width: 56px;
+            height: 64px;
+            flex-shrink: 0;
+            text-align: center;
+            font-family: $font-primary;
+            font-size: 16px;
+            margin: 2px 8px;
+        }
+
+        .auth-inp::-webkit-inner-spin-button,
+        .auth-inp::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            margin: 0;
+        }
+    }
+
+    .qr-block {
+        display: flex;
+        justify-content: center;
+        padding: 10px 15px 5px;
+        margin-bottom: 15px;
+    }
+
+    .btn-block {
+        padding-top: 35px;
+        text-align: center;
+
+        .btn-2fa-validate {
+            width: 284px;
+        }
     }
 }
