--- a/scss/login.scss
+++ b/scss/login.scss
@@ -839,6 +839,22 @@ button.close-modal {
             font-family: $font-primary;
             font-size: 16px;
             margin: 2px 8px;
+            @media ($sm-1481) {
+                width: 52px;
+                height: 60px;
+            }
+            @media ($sm-579) {
+                width: 45px;
+                height: 55px;
+                border-radius: 12px;
+            }
+            @media ($sm-479) {
+                margin: 2px 4px;
+            }
+            @media (max-width:350px) {
+                width: 40px;
+                height: 52px;
+            }
         }
 
         .auth-inp::-webkit-inner-spin-button,
@@ -860,9 +876,12 @@ button.close-modal {
     .btn-block {
         padding-top: 35px;
         text-align: center;
-
-        .btn-2fa-validate {
-            width: 284px;
+        .login-btn{
+            max-width: 450px;
+            margin: 0 auto;
+            @media ($sm-1679) {
+                max-width: 430px;
+            }
         }
     }
 }
