--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1194,4 +1194,9 @@ $dark-block-2: #2B2C2E;
         color: white;
         border-color: #4E4E4E;
     }
+    .gen-qr-block{
+        p{        
+            color: #fff;
+        }
+    }
 }
