--- a/scss/login.scss
+++ b/scss/login.scss
@@ -934,3 +934,9 @@ button.close-modal {
     }
     
 }
+.fa2-block-cover{
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
