--- a/css/home-page.css
+++ b/css/home-page.css
@@ -1107,6 +1107,13 @@
     .section-faq {
       padding-top: 0px;
       padding-bottom: 30px; } }
+  @media (max-width: 991px) {
+    .section-faq .container-custom {
+      max-width: 100%; } }
+  @media (max-width: 579px) {
+    .section-faq .container-custom {
+      padding-left: 0;
+      padding-right: 0; } }
   .section-faq .sec-title {
     color: #2E4276;
     text-align: center;
@@ -1831,18 +1838,21 @@
   .by-props-sec .four-props .box-props {
     display: flex;
     align-items: center;
-    width: 24%;
+    width: calc(20% - 8px);
     border-radius: 15px;
-    padding: 20px 30px;
+    padding: 20px 15px;
+    padding-right: 5px;
     background: #B8DCFF; }
     .by-props-sec .four-props .box-props p {
-      font-size: 18px;
+      font-size: 17px;
       font-weight: 400;
       line-height: 27px;
       letter-spacing: 0em;
       text-align: left;
       margin: 0;
-      color: #2E4276; }
+      color: #2E4276;
+      display: flex;
+      align-items: center; }
     .by-props-sec .four-props .box-props:nth-child(2) {
       background: #DFFAFC; }
     .by-props-sec .four-props .box-props:nth-child(3) {
@@ -1885,8 +1895,12 @@
     .by-props-sec .four-props {
       flex-wrap: wrap; }
       .by-props-sec .four-props .box-props {
-        width: 100%;
+        width: 48%;
         margin-bottom: 20px; } }
+@media (max-width: 430px) {
+  .by-props-sec .four-props .box-props {
+    width: 100%;
+    padding-left: 25px; } }
 @media (min-width: 768px) and (max-width: 1199px) {
   .by-props-sec {
     padding: 50px 0px; }
