--- a/css/staking.css
+++ b/css/staking.css
@@ -91,11 +91,11 @@
     @media (max-width: 1679px) {
       .staking-dashboard-outer .total-value-outer {
         flex: 0 0 35%;
-        padding: 20px 22px; } }
+        padding: 20px 20px; } }
     @media (max-width: 1441px) {
       .staking-dashboard-outer .total-value-outer {
         flex: 0 0 40%;
-        padding: 20px 22px; } }
+        padding: 20px 18px; } }
     @media (max-width: 1199px) {
       .staking-dashboard-outer .total-value-outer {
         flex: 0 0 35%;
@@ -1046,8 +1046,14 @@
       overflow: hidden; }
       .staking-card-block .progress-sm-sec .progress-col.progress-col-left {
         width: calc(60% - 10px); }
+        @media (max-width: 1679px) {
+          .staking-card-block .progress-sm-sec .progress-col.progress-col-left {
+            width: calc(64% - 10px); } }
       .staking-card-block .progress-sm-sec .progress-col.progress-col-right {
         width: 40%; }
+        @media (max-width: 1679px) {
+          .staking-card-block .progress-sm-sec .progress-col.progress-col-right {
+            width: 36%; } }
     .staking-card-block .progress-sm-sec .dur-cover {
       height: 100%;
       width: 100%;
@@ -1313,7 +1319,6 @@
     padding: 10px 10px; }
 
   .staking-card-block .progress-sm-sec .dur-cover .dur-itm-block {
-    font-size: 12px;
     min-height: 26px;
     line-height: 15px; }
 
@@ -1351,6 +1356,15 @@
     height: 12px;
     right: 4px;
     top: 4px; } }
+@media (max-width: 700px) {
+  .staking-card-block .progress-sm-sec .dur-cover .dur-itm-block {
+    font-size: 14px; }
+
+  .staking-card-block .progress-sm-sec .progress-col.progress-col-right {
+    width: 35%; }
+
+  .staking-card-block .progress-sm-sec .progress-col.progress-col-left {
+    width: calc(65% - 10px); } }
 @media (max-width: 579px) {
   .staking-card-block .card-btm-sec .stake-btn {
     padding: 11px 15px;
@@ -1720,6 +1734,7 @@
     max-width: 1000px;
     margin: 0 auto; }
     .welcome-stake-outer-v3 .item-row img {
+      width: 250px;
       max-width: 100%; }
     .welcome-stake-outer-v3 .item-row .item-col {
       padding: 15px;
@@ -1727,7 +1742,12 @@
       flex-grow: 1; }
       .welcome-stake-outer-v3 .item-row .item-col.item-col-lg {
         position: relative;
-        padding: 30px 15px; }
+        padding: 30px 15px;
+        display: flex;
+        justify-content: center; }
+        .welcome-stake-outer-v3 .item-row .item-col.item-col-lg img {
+          width: auto;
+          max-width: 100%; }
         .welcome-stake-outer-v3 .item-row .item-col.item-col-lg::before {
           content: '';
           position: absolute;
@@ -1755,6 +1775,7 @@
         text-align: center;
         color: #2966FF; }
         .welcome-stake-outer-v3 .item-row .item-col p .a-link {
+          white-space: nowrap;
           color: #2966FF;
           text-decoration: underline;
           font-size: 13px;
@@ -1764,15 +1785,17 @@
             opacity: .8; }
 
 @media (max-width: 1679px) {
+  .welcome-stake-outer-v3 .item-row .item-col.item-col-lg {
+    padding: 22px 15px; }
+
   .welcome-stake-outer-v3 .bnr-title {
     font-size: 14px; }
 
   .welcome-stake-outer-v3 .item-row .icon img {
-    max-height: 45px;
-    max-width: 150px; }
+    width: 200px; }
 
   .welcome-stake-outer-v3 .item-row .icon-lg img {
-    max-height: 130px; }
+    max-height: 160px; }
 
   .welcome-stake-outer-v3 .item-row {
     max-width: 700px; }
@@ -1784,16 +1807,32 @@
     margin-top: 6px; } }
 @media (max-width: 1481px) {
   .welcome-stake-outer-v3 .item-row .icon-lg {
-    min-width: 180px; }
+    min-width: 150px; }
 
   .welcome-stake-outer-v3 .item-row .icon img {
-    max-width: 100%; } }
+    width: 170px; }
+
+  .welcome-stake-outer-v3 .item-row .icon-lg img {
+    max-height: 140px; } }
 @media (max-width: 1199px) {
   .welcome-stake-outer-v3 {
     margin-right: 0; } }
+@media (max-width: 680px) {
+  .welcome-stake-outer-v3 .item-row .icon img {
+    width: 150px;
+    max-width: 100%; }
+
+  .welcome-stake-outer-v3 .item-row .item-col {
+    padding: 15px 0; }
+
+  .welcome-stake-outer-v3 .item-row .icon-lg {
+    min-width: 140px; } }
 @media (max-width: 579px) {
   .welcome-stake-outer-v3 .item-row .icon-lg {
-    min-width: 150px; }
+    min-width: 100px; }
+
+  .welcome-stake-outer-v3 .item-row .item-col p .a-link {
+    white-space: nowrap; }
 
   .welcome-stake-outer-v3 .item-row .item-col p .a-link {
     font-size: 11px; }
@@ -1815,7 +1854,7 @@
     max-height: 38px; }
 
   .welcome-stake-outer-v3 .item-row .icon-lg img {
-    max-height: 90px; }
+    max-height: 115px; }
 
   .welcome-stake-outer-v3 .item-row .icon img {
     max-width: 150px; }
@@ -1833,6 +1872,6 @@
     max-height: 80%; }
 
   .welcome-stake-outer-v3 .item-row .item-col.item-col-lg {
-    padding: 20px 15px; } }
+    padding: 15px; } }
 
 /*# sourceMappingURL=staking.css.map */
