--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -1273,6 +1273,15 @@
         padding-top: 0px;
       padding-bottom: 30px;
       }
+      .container-custom{
+        @media ($sm-991){
+            max-width: 100%;
+        }
+        @media ($sm-579){
+            padding-left: 0;
+            padding-right: 0;
+        }
+      }
     .sec-title{
       color: $title-light;
       text-align: center;
@@ -2350,17 +2359,20 @@ flex-wrap: wrap;
         .box-props{
             display: flex;
             align-items: center;
-            width: 24%;
+            width: calc(20% - 8px);
             border-radius: 15px;
-            padding: 20px 30px;
+            padding: 20px 15px;
+            padding-right: 5px;
             p{
-                font-size: 18px;
+                font-size: 17px;
                 font-weight: 400;
                 line-height: 27px;
                 letter-spacing: 0em;
                 text-align: left;
                 margin: 0;
                 color: #2E4276;
+                display: flex;
+                align-items: center;
             }
           
             background:#B8DCFF;
@@ -2480,13 +2492,18 @@ flex-wrap: wrap;
             flex-wrap: wrap;
 
             .box-props{
-                width: 100%;
+                width: 48%;
                 margin-bottom: 20px;
             }
         }
     }
    }
-
+   @media(max-width: 430px){
+    .by-props-sec .four-props .box-props{
+        width: 100%;
+        padding-left: 25px;
+    }
+   }
    @media (min-width: 768px) and (max-width: 1199px) {
 
     
