--- a/scss/side-nav.scss
+++ b/scss/side-nav.scss
@@ -52,6 +52,9 @@
         .toggle-btn-block{
             padding: 10px 0;
             display: flex;
+            @media ($sm-991) {
+                align-items: center;
+            }
         }
         .nav-toggle-btn{
             margin-left: auto;
@@ -519,5 +522,99 @@
     .nav-block .navbar-collapse-block .wallet-btn-block-mob .wallet-btn-mob{
         padding: 12px;
         font-size: 15px;
+    }
+}
+
+
+.nav-block{
+    .buy-pros-dropdown{
+        margin-right: 12px;
+        @media (min-width: 991px) {
+            display: none;
+        }
+        @media ($sm-479) {
+            margin-right: 8px;
+        }
+        .buy-pros-btn{
+            width: 140px;
+            max-height: 38px;
+            padding: 9px 18px;
+            border-radius: 20px;
+            // background: $primary-light;
+            // color: $input-text-color;
+            border: solid 1px $primary-blue;
+            color: $primary-light;
+            background: $primary-blue;
+            display: flex;
+            align-items: center;
+            font-size: 13px;
+            @media ($sm-479) {
+                font-size: 12px;
+                width: 116px;
+                padding: 9px 15px;
+            }
+            @media (max-width: 380px) {
+                width: 110px;
+                padding: 8px 15px;
+                padding-left: 11px;
+            }
+            .acc-label{
+                margin-right: 8px;
+            }
+            &::after{
+                margin-left: auto;
+                margin-right: 2px;
+                border-top-color: $input-text-color;
+                border-top: 0.4em solid;
+                border-right: 0.4em solid transparent;
+                border-left: 0.4em solid transparent;
+            }
+        }
+        .dropdown-menu{
+            border-radius: 10px;
+            background: #FFF;
+            box-shadow: 0px 6px 9px 5px rgba(0, 0, 0, 0.06);
+            border: none;
+            padding: 5px;
+            margin-top: 20px !important;
+            min-width: 190px;
+            .dropdown-item{
+                display: flex;
+                align-items: center;
+                border-radius: 8px;
+                height: 52px;
+                font-size: 13px;
+                color: $primary-dark;
+                transition: .3s;
+                .icon{
+                    flex-grow: 0;
+                    margin-right: 10px;
+                    width: 22px;
+                    img{
+                        max-width: 100%;
+                        border-radius: 50%;
+                    }
+                }
+                &:hover{
+                    background: #F0F1F9;
+                }
+                &.item-disbaled{
+                    opacity: .5;
+                    cursor: not-allowed;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 380px) {
+    .nav-block .nav-logo-wrapper .nav-logo img{
+        max-width: 100px;
+    }
+    .nav-block .nav-logo-wrapper .nav-logo .logo-img img{
+        max-width: 24px;
+    }
+    .nav-block .nav-logo-wrapper {
+        padding: 5px 10px;
     }
 }
