--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1209,4 +1209,10 @@ $dark-block-2: #2B2C2E;
             background-color: #131313;
         }
     }
+    .buy-pros-select-block .props-title{
+        border-color: rgba(72, 72, 72, 0.7);
+        h4{
+            color: $primary-light;
+        }
+    }
 }
