--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -792,5 +792,9 @@
       color: #fff; }
     .theme-dark .nav-block .buy-pros-dropdown .dropdown-menu .dropdown-item:hover {
       background-color: #131313; }
+  .theme-dark .buy-pros-select-block .props-title {
+    border-color: rgba(72, 72, 72, 0.7); }
+    .theme-dark .buy-pros-select-block .props-title h4 {
+      color: #fff; }
 
 /*# sourceMappingURL=dark-theme.css.map */
