--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -1673,6 +1673,9 @@
     }
 }
 @media($sm-1481){
+    .staking-card-block .table-block-cover .table-card .tab-val{
+        font-size: 13px;
+    }
     .staking-card-block .progress-sm-sec .progress-block{
         width: 85px;
     }
